outputs/main/eoh_tsp_aco_2025-04-21_11-58-31/evaluations/problem_eval2100113746283695667_stdout.txt
Traceback (most recent call last):
  File "C:\Users\Nam\Documents\GitHub\HSEvo/problems/tsp_aco/eval.py", line 10, in <module>
    import gpt
  File "C:\Users\Nam\Documents\GitHub\HSEvo\problems\tsp_aco\gpt.py", line 1
    importance.
               ^
SyntaxError: invalid syntax
